--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"
+    />
+    <script src="https://kit.fontawesome.com/e46679f971.js"></script>
     <link rel="stylesheet" href="main.css" />
     <title>Document</title>
   </head>
@@ -11,19 +16,26 @@
     <header class="header">
       <h1>Bookmark Manager Pro</h1>
     </header>
-    <main>
+    <main class="content-container">
+      <div class="error"></div>
       <div class="form-container">
-        <button class="form-button">Add Bookmark</button>
-        <label for="filter">Filter Bookmarks by Minimum Rating</label>
-        <select id="filter" name="filter">
-          <option value="">...</option>
-          <option value="2"> 2 stars</option>
-          <option value="3"> 3 stars</option>
-          <option value="4"> 4 stars</option>
-          <option value="5"> 5 stars</option>
-        </select>
-      </div>
+        <div class="input-group">
+          <label for="filter">Filter Bookmarks by Minimum Rating</label>
+          <select id="filter" name="filter">
+            <option value="">...</option>
+            <option value="2"> 2 stars</option>
+            <option value="3"> 3 stars</option>
+            <option value="4"> 4 stars</option>
+            <option value="5"> 5 stars</option>
+          </select>
+        </div>
 
+        <button class="button form-button">Add Bookmark</button>
+        <div class="form-holder"></div>
+      </div>
+      <div class="bookmark-list-title">
+        <h2>Your Bookmarks</h2>
+      </div>
       <ul class="bookmarkList"></ul>
     </main>
   </body>
@@ -32,8 +44,8 @@
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
     crossorigin="anonymous"
   ></script>
-  <script src="api.js"></script>
   <script src="store.js"></script>
+  <script src="api.js"></script>
   <script src="bookmarks.js"></script>
   <script src="index.js"></script>
 </html>
