--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
     crossorigin="anonymous"
   ></script>
-  <script src="store.js"></script>
-  <script src="api.js"></script>
-  <script src="bookmarks.js"></script>
-  <script src="index.js"></script>
+  <script src="scripts/store.js"></script>
+  <script src="scripts/api.js"></script>
+  <script src="scripts/bookmarks.js"></script>
+  <script src="scripts/index.js"></script>
 </html>
