added link in readme

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="error"></div>
       <div class="form-container">
         <div class="input-group">
-          <label for="filter">Filter Bookmarks by Minimum Rating</label>
+          <label for="filter">Filter Your Bookmarks by Minimum Rating</label>
           <select id="filter" name="filter">
             <option value="">...</option>
             <option value="2"> 2 stars</option>
